<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#22aa33"
    tools:context="com.tsubaku.savingsinshops.TableActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:weightSum="1">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.83">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stringSetProduct"
                android:id="@+id/textViewProduct"
                android:layout_gravity="center_horizontal" />

            <GridView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/gridViewTable"
                android:columnWidth="150dp"
                android:gravity="center"
                android:horizontalSpacing="5dp"
                android:verticalSpacing="5dp"
                android:numColumns="auto_fit"
                android:stretchMode="none"
                android:background="@android:color/holo_blue_dark"
                >

            </GridView>



        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.21">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Back"
                android:id="@+id/button"
                android:onClick="onClickBack2" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Next"
                android:id="@+id/button2"
                android:onClick="onClickNext2"
                android:visibility="invisible" />
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>
